# Machine-Learner

./: .gitignore  LICENSE  README.md  __init__.py  cost_functions.py  main.py  neural_network.py  optimizers.py  pyproject.toml  requirements.txt  setup.cfg  utils.py
.github/workflows/: tests.yml
data/: data_loader.py
layers/: activation_functions.py  dense.py
src/machine_learner/: __init__.py  cost_functions.py  loss_functions.py  neural_network.py  optimizers.py  type_stubs.py  utils.py
src/machine_learner/data/: data_loader.py
src/machine_learner/extras/: factory.py  levenshtein.py
src/machine_learner/layers/: __init__.py  activation_functions.py  dense.py  layer.py
tests/: activation_functions_test.py  test_activation_functions.py  test_utils.py
