[metadata]
name = machine_learner
version = 0.1.0
description = A machine learning tool built from scratch
author = Paul Wassermann
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3 :: Only,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Development Status :: 3 - Alpha

[options]
packages =
    machine_learner
    machine_learner.layers
    machine_learner.data
install_requires =
    numpy>=1.20
    matplotlib>=3.2
    scipy>=1.5
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
machine_learner = py.typed

[flake8]
max-line-length = 160
